--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ body{
     background-color: #99EE99;
     width: 100%;
     color: #FFFFFF;
-    height: 60pt;
+    height: 80pt;
     font-weight: bold;
     overflow: auto;
     padding-left: -10pt;
@@ -85,10 +85,51 @@ a{
     line-height: 20pt;
     letter-spacing: 2pt;
 }
+#menuitem{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#77CC77;
+    border: 1px solid white;
+    border-radius: 2px 2px 2px 2px;
+    border-top: 2px solid #88DD88;
+    border-left: 2px solid #88DD88;
+    border-right: 2px solid #66BB66;
+    border-bottom: 2px solid #66BB66;
+    line-height: 20pt;
+    letter-spacing: 2pt;
+    padding-bottom: 0pt;
+}
 #right{
     text-align: right;
 }
+
+
+#info{
+    color: #555555;
+    font-size: 10pt;
+}
+
 h1 {
+    display:inline;
+    margin:0px;
+}
+h2 {
+    display:inline;
+    margin:0px;
+}
+h3 {
+    display:inline;
+    margin:0px;
+}
+h4 {
+    display:inline;
+    margin:0px;
+}
+h5 {
+    display:inline;
+    margin:0px;
+}
+h6 {
     display:inline;
     margin:0px;
 }
