--- a/stylesheet.night.css
+++ b/stylesheet.night.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial,serif;
-    background-color: #878787;
+    background-color: #444444;
 }
 #hits{
 /*
@@ -14,7 +14,7 @@ body{
 */
 }
 #main{
-    background-color:#0F0F0F;
+    background-color:#212744;
     width: 98%;
     text-align: left;
     word-wrap: break-word;
@@ -35,7 +35,7 @@ body{
     background-color: #2F3660;
     width: 100%;
     color: #FFFFFF;
-    height: 60pt;
+    height: 80pt;
     font-weight: bold;
     overflow: auto;
     padding-left: -10pt;
@@ -86,10 +86,6 @@ body{
 }
 
 
-
-
-
-
 #knopp:hover{
     color:#FFFFFF;
     text-decoration: none;
@@ -135,10 +131,25 @@ body{
     letter-spacing: 2pt;
     box-shadow: 0px 0px 10px #DDCC77;
 }
+#menuitem{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#435189;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #495A96;
+    border-left: 2px solid #495A96;
+    border-right: 2px solid #212A44;
+    border-bottom: 2px solid #212A44;
+}
 
 
 
 
+#info{
+    color: #BBBBBB;
+    font-size: 10pt;
+}
 
 
 
@@ -146,6 +157,26 @@ body{
     text-align: right;
 }
 h1 {
+    display:inline;
+    margin:0px;
+}
+h2 {
+    display:inline;
+    margin:0px;
+}
+h3 {
+    display:inline;
+    margin:0px;
+}
+h4 {
+    display:inline;
+    margin:0px;
+}
+h5 {
+    display:inline;
+    margin:0px;
+}
+h6 {
     display:inline;
     margin:0px;
 }
