--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body{
 */
 }
 #main{
-    background-color:#FFFFEE;
+    background-color:#FFFFDD;
     width: 98%;
     text-align: left;
     word-wrap: break-word;
@@ -70,6 +70,20 @@ body{
 }
 a{
     color: #449944;
+}
+#addknopp{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#7777DD;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #9999FF;
+    border-left: 2px solid #9999FF;
+    border-right: 2px solid #5555BB;
+    border-bottom: 2px solid #5555BB;
+    margin: 2pt;
+    line-height: 20pt;
+    text-align: center;
 }
 #knoppread{
     color:#FFFFFF;
