--- a/stylesheet.night.css
+++ b/stylesheet.night.css
@@ -70,6 +70,19 @@ body{
     line-height: 20pt;
     letter-spacing: 2pt;
 }
+#knoppedit{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#227777;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #449999;
+    border-left: 2px solid #449999;
+    border-right: 2px solid #005555;
+    border-bottom: 2px solid #005555;
+    margin: 2pt;
+    line-height: 20pt;
+}
 #knoppread{
     color:#FFFFFF;
     text-decoration: none;
@@ -116,6 +129,21 @@ body{
     letter-spacing: 2pt;
     box-shadow: 0px 0px 10px #CC7777;
 }
+#knoppedit:hover{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#77CCCC;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #99EEEE;
+    border-left: 2px solid #99EEEE;
+    border-right: 2px solid #55AAAA;
+    border-bottom: 2px solid #55AAAA;
+    margin: 2pt;
+    line-height: 20pt;
+    letter-spacing: 2pt;
+    box-shadow: 0px 0px 10px #77CCCC;
+}
 #knoppread:hover{
     color:#FFFFFF;
     text-decoration: none;
@@ -144,7 +172,35 @@ body{
 }
 
 
+#addknopp{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#227777;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #449999;
+    border-left: 2px solid #449999;
+    border-right: 2px solid #005555;
+    border-bottom: 2px solid #005555;
+    margin: 2pt;
+    line-height: 20pt;
+}
+#addknopp:hover{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#77CCCC;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #99EEEE;
+    border-left: 2px solid #99EEEE;
+    border-right: 2px solid #55AAAA;
+    border-bottom: 2px solid #55AAAA;
+    margin: 2pt;
+    line-height: 20pt;
+    letter-spacing: 2pt;
+    box-shadow: 0px 0px 10px #77CCCC;
 
+}
 
 #info{
     color: #BBBBBB;
@@ -231,6 +287,20 @@ input[type=password]{
     border-right: 2px solid #88DD88;
     border-bottom: 2px solid #88DD88;
     width: 160;
+}
+textarea {
+    color:#FFFFFF;
+    font-weight: bold;
+    text-decoration: none;
+    background-color:#435189;
+    border: 1px solid white;
+    border-top: 2px solid #212A44;
+    border-left: 2px solid #212A44;
+    border-right: 2px solid #495A96;
+    border-bottom: 2px solid #495A96;
+    width: 99%;
+    height: 200pt;
+    border-radius: 5px 5px 5px 5px;
 }
 #content{
     background-color:#2F3660;
