Added a bunch of new features and some Eastereggs
• In the searchbar type "gimme all the damn files" and it will give you all files. Same works for "%".
• Fixed some issues concerning the filereading and deleting. If it is a video or image file it won't show you the content anymore. Instead it will show you a nice image or video.
• Added a Favicon! #Wuhu!

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,6 +82,20 @@ body{
     line-height: 20pt;
     letter-spacing: 2pt;
 }
+#knoppdownload{
+    color:#FFFFFF;
+    text-decoration: none;
+    background-color:#CC77CC;
+    border-radius: 2px 2px 2px 2px;
+    border: 1px solid white;
+    border-top: 2px solid #EE99EE;
+    border-left: 2px solid #EE99EE;
+    border-right: 2px solid #AA55AA;
+    border-bottom: 2px solid #AA55AA;
+    margin: 2pt;
+    line-height: 20pt;
+    letter-spacing: 2pt;
+}
 a{
     color: #449944;
 }
