--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@ body{
     font-family: Arial,serif;
     background-color: #fff;
 }
+.readercontrol {
+    background-color: rgba(255,255,255,0.5);
+    width: 90%;
+}
 #bgroundimage{
     background: url("bg.png") no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -14,9 +18,17 @@ body{
     position: fixed;
     left: 0%;
     top: 0%;
-    
-
 }
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+
 #hits{
 /*
     background-color:#FFFFFF;
@@ -52,17 +64,18 @@ ul {
 }  
 .ui-menu-item-wrapper:hover{
     cursor:pointer;
-	position: relative;
+    position: relative;
     background-color: #B6FF7E;
     background-image: linear-gradient(to right, #A5EE6D, #A5EE6D, #B6FF7E, #B6FF7E);
     color: #FFF;
     text-shadow: 0px 2px 2px #000;
     list-style: none;
-	background-position: top;
+    background-position: top;
 }
 #main{    
     //background-image: linear-gradient(23deg, #FFF, #D9FFD1, #D9FFD1, #FFF, #FFF);
-    background-image: linear-gradient(23deg, #BBFFAA, #B4FFA3, #B4FFA3, #BBFFAA, #FFDEA3);
+    //background-image: linear-gradient(23deg, #BBFFAA, #B4FFA3, #B4FFA3, #BBFFAA, #FFDEA3);
+    background-color: rgba(180,250,170,0.8);
     width: 100%;
     text-align: left;
     word-wrap: break-word;
